--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@emailjs/browser": "^3.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-particles": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
